# transcribrr

./: .gitignore  .repomix-output.xml.kate-swp  AGENTS.md  ARCHITECTURE_AUDIT.md  CLAUDE.md  DEVELOPMENT.md  GPT4ProcessingThread.py  MainWindow.py  PromptManagerDialog.py  README.md  SettingsDialog.py  TEST_PLANS_V2.md  TranscriptionThread.py  YouTubeDownloadThread.py  briefcase.macOS.post_build  build_app.sh  build_github_macos.sh  build_macos_app.sh  build_windows_app.bat  config.json  create_icns.py  create_ico.py  main.py  old_mainwindow.py  preset_prompts.json  pyproject.toml  repomix-output.xml  requirements.txt  setup.py  test_responsive_fix.py  test_results.txt  test_theme_config.py  transcribrr.spec  update_imports.sh
.claude/agents/: github-actions-cicd-expert.md  python-unittest-implementer.md
.github/workflows/: README.md  build-macos.yml  build-windows.yml  build.yml  build_macos.yml  ci.yml  dependencies.yml  macos.yml  python-tests.yml  quality.yml  release.yml  test.yml  warm_cache.yml
app/: ControlPanelWidget.py  DatabaseManager.py  FileDropWidget.py  FolderManager.py  FolderTreeWidget.py  GPT4ProcessingThread.py  MainTranscriptionWidget.py  MainWindow.py  PromptManagerDialog.py  RecentRecordingsWidget.py  RecordingFolderModel.py  RecordingListItem.py  ResponsiveUI.py  SVGButton.py  SVGToggleButton.py  SettingsDialog.py  TextEditor.py  ThemeManager.py  ThreadManager.py  ToggleSwitch.py  TranscodingThread.py  TranscriptionThread.py  UnifiedFolderTreeView.py  VoiceRecorderWidget.py  YouTubeDownloadThread.py  __init__.py  __main__.py  constants.py  database.py  db_utils.py  file_utils.py  path_utils.py  secure.py  test_db_signal_leak.py  test_duplicates.py  test_thread_safe_db.py  ui_utils.py  ui_utils_legacy.py  utils.py
app/controllers/: __init__.py  gpt_controller.py  transcription_controller.py
app/models/: recording.py  view_mode.py
app/services/: transcription_service.py
app/tests/: AGENTS.md  README.md  __init__.py  test_atomic_rename.py  test_auth_manager.py  test_busy_guard.py  test_config_manager.py  test_create_folder.py  test_database_manager.py  test_database_manager_behavior.py  test_database_manager_plan.yaml  test_database_worker_integration.py  test_date_filters.py  test_db_utils_unit.py  test_dummy.py  test_error_handling.py  test_feedback_manager.py  test_filter_null_transcript.py  test_folder_manager.py  test_folder_manager_behavior.py  test_folder_manager_plan.yaml  test_gpt_controller.py  test_gpt_controller_plan.yaml  test_gpt_processor.py  test_item_rendering.py  test_mainwindow.py  test_mainwindow_plan.yaml  test_path_utils.py  test_path_utils_simple.py  test_prompt_bar.py  test_prompt_manager.py  test_recording_duplicates.py  test_recording_folder_model.py  test_recording_model.py  test_recording_model_plan.yaml  test_rename_sync.py  test_secure.py  test_secure_comprehensive_plan.yaml  test_secure_redaction.py  test_simple_paths.py  (+16 more)
app/tests/helpers/: busy_guard_helpers.py
app/tests/manual/: test_batch_inserts.py  test_db_injection.py  test_duplicate_file.py  test_duplicate_guard.py
app/tests/test_plans/: fix_test_busy_guard.yaml
app/threads/: GPT4ProcessingThread.py  TranscodingThread.py  TranscriptionThread.py  YouTubeDownloadThread.py  __init__.py
app/ui_utils/: __init__.py  busy_guard.py  error_handling.py  icon_utils.py
app/widgets/: __init__.py  prompt_bar.py
database/: database.sqlite
examples/: filter_proxy_example.py
icons/app/: app_icon.icns
installer/: transcribrr_setup.iss
test_plans/: TEST_ISSUES.md  fix_test_database_manager.yaml  fix_test_folder_manager.yaml  fix_test_gpt_controller.yaml  fix_test_mainwindow.yaml  fix_test_secure.yaml  fix_test_thread_manager.yaml  fix_test_transcription_controller.yaml  fix_test_transcription_service.yaml  fix_test_widget_feedback_interaction.yaml  test_VoiceRecorderWidget.yaml
test_plans/completed/: comprehensive_test_db_utils.yaml  fix_test_atomic_rename.yaml  fix_test_busy_guard.yaml  fix_test_busy_guard.yaml.run2  fix_test_database_manager.yaml  fix_test_database_manager_behavior.yaml  fix_test_database_manager_behavior.yaml.run2  fix_test_database_manager_behavior_v2.yaml  fix_test_database_worker_concurrency.yaml  fix_test_database_worker_concurrency.yaml.run2  fix_test_database_worker_integration.yaml  fix_test_db_utils_unit.yaml  fix_test_db_utils_unit.yaml.run2  fix_test_error_handling.yaml  fix_test_feedback_manager.yaml  fix_test_feedback_manager.yaml.run2  fix_test_feedback_manager_v3.yaml  fix_test_folder_manager.yaml  fix_test_folder_manager.yaml.run2  fix_test_folder_manager_behavior.yaml  fix_test_folder_manager_behavior.yaml.run2  fix_test_gpt_controller.yaml  fix_test_gpt_controller_behavior.yaml  fix_test_gpt_controller_behavior.yaml.run2  fix_test_mainwindow.yaml  fix_test_path_utils.yaml  fix_test_path_utils.yaml.run2  fix_test_path_utils_comprehensive.yaml  fix_test_recording_model.yaml  fix_test_recording_model.yaml.run2  fix_test_secure.yaml  fix_test_secure.yaml.run2  fix_test_secure_behavior.yaml  fix_test_spinner_no_gui.yaml  fix_test_thread_launcher.yaml  fix_test_thread_manager.yaml  fix_test_thread_manager_v2.yaml  fix_test_thread_manager_v2.yaml.run2  fix_test_thread_manager_v3.yaml  fix_test_transcription_controller.yaml  (+7 more)
tests/test_plans/: test_text_editor.yaml
